@@ -19,11 +19,11 @@ along with this file.  If not, see <https://www.gnu.org/licenses/>.
 
 */
 
-package it.unimi.di.prog2.s09;
+package it.unimi.di.prog2.h11;
 
 import it.unimi.di.prog2.h08.impl.NegativeExponentException;
+import java.util.ArrayList;
 import java.util.Collections;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
 
@@ -42,14 +42,28 @@ public class SparsePoly {
    * @param degree the degree.
    */
   public record Term(int coefficient, int degree) {
+
+    /*-
+     * AF:
+     *
+     *  AF(coefficient, degree) = coefficient * x^degree
+     *
+     * RI:
+     *
+     *   - degree >= 0
+     *   - coefficient != 0
+     *
+     */
+
     /**
      * Builds a term.
      *
-     * @throws NegativeExponentException if {@code n} &lt; 0.
+     * @param coefficient the coefficient.
+     * @param degree the degree.
+     * @throws IllegalArgumentException if {@code n} &lt; 0 or {@code c} is 0.
      */
-    public Term { // using the compact constructor
-      if (degree < 0)
-        throw new NegativeExponentException("A term cannot have a negative exponent.");
+    public Term { // using the compact constructor, cannot declare throws
+      if (degree < 0) throw new IllegalArgumentException("A term cannot have a negative exponent.");
       if (coefficient == 0)
         throw new IllegalArgumentException("A term cannot have a zero coefficient.");
     }
@@ -57,6 +71,17 @@ public class SparsePoly {
 
   /** The array of terms (in increasing degree). */
   private final List<Term> terms;
+
+  /*
+   * AF:
+   *
+   *  AF(terms) = \sum terms.get(i).coefficient x^terms.get(i).degree
+   *
+   * RI:
+   *
+   *  - terms != null and does not contain null
+   *  - terms is in strictly increasing degree order
+   */
 
   /** Initializes this to be the zero polynomial, that is \( p = 0 \). */
   public SparsePoly() {
@@ -70,7 +95,7 @@ public class SparsePoly {
    * @param n the degree.
    * @throws NegativeExponentException if {@code n} &lt; 0.
    */
-  public SparsePoly(int c, int n) throws NegativeExponentException {
+  public SparsePoly(final int c, final int n) throws IllegalArgumentException {
     terms = c == 0 ? Collections.emptyList() : List.of(new Term(c, n));
   }
 
@@ -85,31 +110,15 @@ public class SparsePoly {
   }
 
   /**
-   * Finds the index of a term of given degree in a list of terms in increasing degree order.
-   *
-   * @param lst the not {@code null} list of not {@code null} terms and in increasing degree order.
-   * @param d the degree.
-   * @return the index of a term of given degree, or -1 if none is present.
-   */
-  private static int findByDegree(List<Term> lst, int d) {
-    for (int i = 0; i < lst.size(); i++) {
-      final int degree = lst.get(i).degree;
-      if (degree == d) return i;
-      if (degree > d) return -1;
-    }
-    return -1;
-  }
-
-  /**
    * Returns the coefficient of the term of given exponent.
    *
    * @param d the exponent of the term to consider.
    * @return the coefficient of the considered term.
    */
-  public int coeff(int d) {
-    if (d < 0 || d > degree()) return 0;
-    int i = findByDegree(terms, d);
-    return i != -1 ? terms.get(i).coefficient : 0;
+  public int coeff(final int d) {
+    if (d > degree()) return 0;
+    final int i = findByDegree(terms, d);
+    return i >= 0 ? terms.get(i).coefficient : 0;
   }
 
   /**
@@ -119,7 +128,35 @@ public class SparsePoly {
    *     Poly}.
    */
   public int degree() {
-    return terms.isEmpty() ? 0 : terms.getLast().degree;
+    return terms.isEmpty() ? 0 : terms.get(terms.size() - 1).degree;
+  }
+
+  /**
+   * Finds the index (or insertion point) of a term of given degree in a list of terms in increasing
+   * degree order.
+   *
+   * <p>If the list contains a term of given degree, returns its index. Otherwise, returns {@code
+   * -(insertion_point) - 1} where {@code insertion_point} is the index of the first term with
+   * degree greater than {@code d}; note that this implies that the return value is non-negative iff
+   * the list contains a term of given degree.
+   *
+   * @see Collections#binarySearch(List, Object)
+   * @param lst the not {@code null} list of not {@code null} terms in increasing degree order.
+   * @param d the degree.
+   * @return the index of the term of given degree, or {@code -insertion_point - 1} if none is
+   *     present.
+   */
+  private static int findByDegree(final List<Term> lst, final int d) {
+    int lo = 0;
+    int hi = lst.size() - 1;
+    while (lo <= hi) {
+      int mid = lo + (hi - lo) / 2;
+      int midDegree = lst.get(mid).degree;
+      if (d < midDegree) hi = mid - 1;
+      else if (d > midDegree) lo = mid + 1;
+      else return mid;
+    }
+    return -lo - 1;
   }
 
   /**
@@ -131,17 +168,14 @@ public class SparsePoly {
    * @param lst the not {@code null} list of not {@code null} terms in increasing degree order.
    * @param term the not {@code null} term.
    */
-  private static void addTerm(List<Term> lst, Term term) {
+  private static void addTerm(final List<Term> lst, final Term term) {
     if (term.coefficient == 0) return;
-    int i = findByDegree(lst, term.degree);
-    if (i != -1) {
-      int c = lst.get(i).coefficient + term.coefficient;
+    final int i = findByDegree(lst, term.degree);
+    if (i >= 0) {
+      final int c = lst.get(i).coefficient + term.coefficient;
       if (c != 0) lst.set(i, new Term(c, term.degree));
       else lst.remove(i);
-    } else {
-      for (i = 0; i < lst.size(); i++) if (lst.get(i).degree > term.degree) break;
-      lst.add(i, term);
-    }
+    } else lst.add(-i - 1, term);
   }
 
   /**
@@ -155,7 +189,7 @@ public class SparsePoly {
    */
   public SparsePoly add(SparsePoly q) throws NullPointerException {
     Objects.requireNonNull(q, "The polynomial to add cannot be null.");
-    List<Term> result = new LinkedList<>(this.terms);
+    List<Term> result = new ArrayList<>(this.terms);
     for (Term t : q.terms) addTerm(result, t);
     return new SparsePoly(result);
   }
@@ -171,7 +205,7 @@ public class SparsePoly {
    */
   public SparsePoly mul(SparsePoly q) throws NullPointerException {
     Objects.requireNonNull(q, "The polynomial to multiply cannot be null.");
-    List<Term> lst = new LinkedList<>();
+    List<Term> lst = new ArrayList<>();
     for (Term tq : q.terms)
       for (Term tt : terms)
         addTerm(lst, new Term(tq.coefficient * tt.coefficient, tq.degree + tt.degree));
@@ -200,8 +234,46 @@ public class SparsePoly {
    * @return this polynomial multiplied by \( -1 \).
    */
   public SparsePoly minus() {
-    List<Term> lst = new LinkedList<>();
+    final List<Term> lst = new ArrayList<>();
     for (Term t : terms) lst.add(new Term(-t.coefficient, t.degree));
     return new SparsePoly(lst);
+  }
+
+  @Override
+  public boolean equals(Object obj) {
+    if (this == obj) return true;
+    if (!(obj instanceof SparsePoly other)) return false;
+    return terms.equals(other.terms);
+  }
+
+  @Override
+  public int hashCode() {
+    return terms.hashCode();
+  }
+
+  @Override
+  public String toString() {
+    if (degree() > 0) {
+      StringBuilder sb = new StringBuilder("SparsePoly: ");
+      int pos = terms.size() - 1;
+      Term t = terms.get(pos);
+      if (t.coefficient < -1) sb.append("-" + (-t.coefficient));
+      else if (t.coefficient == -1) sb.append("-");
+      else if (t.coefficient > 1) sb.append(t.coefficient);
+      sb.append("x" + (t.degree > 1 ? "^" + t.degree : ""));
+      while (--pos >= 0) {
+        t = terms.get(pos);
+        if (t.degree == 0) break;
+        if (t.coefficient < -1) sb.append(" - " + (-t.coefficient));
+        else if (t.coefficient == -1) sb.append(" - ");
+        else if (t.coefficient == 1) sb.append(" + ");
+        else sb.append(" + " + t.coefficient);
+        sb.append("x" + (t.degree > 1 ? "^" + t.degree : ""));
+      }
+      if (t.degree == 0)
+        if (t.coefficient > 0) sb.append(" + " + t.coefficient);
+        else if (t.coefficient < 0) sb.append(" - " + (-t.coefficient));
+      return sb.toString();
+    } else return "SparsePoly: " + (terms.isEmpty() ? 0 : terms.get(0).coefficient);
   }
 }
